Fixed dark mode and added alerts

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  background-color: #b0b4b8;
 }
 
 .btn{
